# paper1_final

./: README.md  pyproject.toml
src/: mcmc.py  metrics.py  model_selection.py  simulate_data.py  simulate_parameters.py  traceplot.py  utils.py
