[project]
name = "paper1-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "importlib>=1.0.4",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyterlab-widgets>=3.0.15",
    "numpy>=2.3.4",
    "numpyro>=0.21.0",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "pytensor>=2.35.1",
    "tqdm>=4.67.1",
]
[tool.setuptools.packages.find]
where = ["src"]
